--- a/views/layout.html
+++ b/views/layout.html
@@ -34,8 +34,7 @@
       </div>
     </div>
   </nav>
-  <article class="markdown-body">
-    {{ html }}
-  </article>
+  {% block main %}
+  {% endblock %}
 </body>
 </html>
