navbar-fixed-top

--- a/views/layout.html
+++ b/views/layout.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap.material-design/0.5.7/css/bootstrap-material-design.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap.material-design/0.5.7/css/ripples.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/tylingsoft/markdown-core/0.4.8/dist/markdown-core.min.css">
+  <link rel="stylesheet" href="/index.css">
   <script src="https://cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bootstrap.material-design/0.5.7/js/material.min.js"></script>
@@ -18,7 +19,7 @@
   <script src="/index.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-items">
