--- a/views/layout.html
+++ b/views/layout.html
@@ -5,21 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{ title }}{{ title_suffix }}</title>
   <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap.material-design/0.5.7/css/bootstrap-material-design.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap.material-design/0.5.7/css/ripples.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/flat-ui/2.2.2/css/flat-ui.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/tylingsoft/markdown-core/0.4.8/dist/markdown-core.min.css">
   <link rel="stylesheet" href="/index.css">
   <script src="https://cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/bootstrap.material-design/0.5.7/js/material.min.js"></script>
   <script src="https://cdn.jsdelivr.net/mermaid/0.5.6/mermaid.min.js"></script>
   <script src="/index.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-items">
