--- a/views/layout.html
+++ b/views/layout.html
@@ -40,5 +40,10 @@
   </nav>
   {% block main %}
   {% endblock %}
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Designed by Tyler Long</p>
+    </div>
+  </footer>
 </body>
 </html>
