--- a/views/layout.html
+++ b/views/layout.html
@@ -42,7 +42,11 @@
   {% endblock %}
   <footer class="footer">
     <div class="container">
-      <p class="text-muted">Designed by Tyler Long</p>
+      <p class="text-muted">
+        Copyright © 2016.
+        Theme and code by <a href="https://github.com/tylerlong" target="_blank">Tyler Long</a>.
+        Powered by <a href="https://github.com/mamljs/maml" target="_blank">maml</a>.
+      </p>
     </div>
   </footer>
 </body>
