--- a/views/layout.html
+++ b/views/layout.html
@@ -15,7 +15,7 @@
   <script src="/index.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-items">
