--- a/views/docs.html
+++ b/views/docs.html
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-5 col-sm-4 col-md-3">
+    <div class="col-xs-5 col-sm-4 col-md-3 sidebar">
       {{ sidebar }}
     </div>
     <div class="col-xs-7 col-sm-8 col-md-9">
