--- a/views/docs.html
+++ b/views/docs.html
@@ -7,7 +7,7 @@
     <div class="col-xs-5 col-sm-4 col-md-3 sidebar">
       {{ sidebar }}
     </div>
-    <div class="col-xs-7 col-sm-8 col-md-9">
+    <div class="col-xs-7 col-sm-8 col-md-9" style="border-left: 1px dashed gray;">
       <article class="markdown-body">
         {{ html }}
       </article>
