--- a/views/layout.html
+++ b/views/layout.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/flat-ui/2.2.2/css/flat-ui.min.css">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/tylingsoft/markdown-core/0.5.0/dist/markdown-core.min.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css">
   <link rel="stylesheet" href="/index.css">
   <script src="https://cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bootstrap/3.3.6/js/bootstrap.min.js"></script>
