--- a/assets/index.css
+++ b/assets/index.css
@@ -2,6 +2,13 @@ body {
   padding-top: 64px;
 }
 
+.markdown-body {
+  min-width: 256px;
+  max-width: 978px;
+  margin: 0 auto;
+  padding: 30px;
+}
+
 .footnotes p {
   font-size: 100%;
 }
