Update template to fit latest maml

--- a/views/docs.html
+++ b/views/docs.html
@@ -5,11 +5,11 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-5 col-sm-4 col-md-3 sidebar">
-      {{ sidebar }}
+      {{ page.sidebar }}
     </div>
     <div class="col-xs-7 col-sm-8 col-md-9" style="border-left: 1px dashed gray;">
       <article class="markdown-body">
-        {{ html }}
+        {{ page.html }}
       </article>
     </div>
   </div>
