--- a/views/layout.html
+++ b/views/layout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{ title }}{{ title_suffix }}</title>
+  <title>{{ page.title }}{{ page.title_suffix }}</title>
   <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/flat-ui/2.2.2/css/flat-ui.min.css">
@@ -22,15 +22,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">{{ brand }}</a>
+        <a class="navbar-brand" href="/">{{ page.brand }}</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-items">
         <ul class="nav navbar-nav">
-          {% for navbar_item in navbar_items %}
+          {% for navbar_item in page.navbar_items %}
             {% if pathname.startsWith(navbar_item) %}
-              <li class="active"><a href="{{ navbar_item }}">{{ configs[navbar_item].name }}</a></li>
+              <li class="active"><a href="{{ navbar_item }}">{{ pages[navbar_item].name }}</a></li>
             {% else %}
-              <li><a href="{{ navbar_item }}">{{ configs[navbar_item].name }}</a></li>
+              <li><a href="{{ navbar_item }}">{{ pages[navbar_item].name }}</a></li>
             {% endif %}
           {% endfor %}
         </ul>
