Update cdn lib versions

--- a/views/layout.html
+++ b/views/layout.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{ page.title }}{{ page.title_suffix }}</title>
   <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/flat-ui/2.2.2/css/flat-ui.min.css">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/designmodo/Flat-UI/master/dist/css/flat-ui.min.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown-light.css">
   <link rel="stylesheet" href="/index.css">
-  <script src="https://cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/jquery/2.2.4/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="/index.js"></script>
 </head>
 <body>
@@ -43,7 +43,7 @@
     <div class="container">
       <p class="text-muted">
         Copyright © 2016.
-        Theme and code by <a href="https://github.com/tylerlong" target="_blank">Tyler Long</a>.
+        Theme and code by <a href="https://github.com/tylerlong" target="_blank">Tyler Liu</a>.
         Powered by <a href="https://github.com/mamljs/maml" target="_blank">maml</a>.
       </p>
     </div>
