Update CDN links

--- a/views/layout.html
+++ b/views/layout.html
@@ -5,13 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{ page.title }}{{ page.title_suffix }}</title>
   <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://raw.githubusercontent.com/designmodo/Flat-UI/master/dist/css/flat-ui.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown-light.css">
   <link rel="stylesheet" href="/index.css">
-  <script src="https://cdn.jsdelivr.net/jquery/2.2.4/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="/index.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -48,5 +45,8 @@
       </p>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/jquery/2.2.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="/index.js"></script>
 </body>
 </html>
